# maboy

./: Cargo.toml  LICENSE  cpu.ods  new.txt  readme.md  thoughts.txt  trash.txt
maboy/: Cargo.toml
maboy/src/: address.rs  interrupt_system.rs  joypad.rs  lib.rs  serial_port.rs  timer.rs
maboy/src/board/: mod.rs  oam_dma.rs
maboy/src/cartridge/: cram.rs  desc.rs  mbc.rs  mod.rs  variant.rs
maboy/src/cartridge/mbc/: banked_rom.rs  mbc1.rs  mbc2.rs  mbc3.rs  mod.rs  rtc.rs
maboy/src/cpu/: execute.rs  instruction.rs  mod.rs  operands.rs  registers.rs
maboy/src/debug/: cpu_debugger.rs  dbg_instr.rs  fmt.rs  mod.rs
maboy/src/memory/: internal_mem.rs  mod.rs
maboy/src/ppu/: color.rs  lcdc.rs  lcds.rs  mem_frame.rs  mod.rs  oam.rs  palette.rs  pixel_queue.rs  ppu_registers.rs  sprite.rs  tile_data.rs  tile_maps.rs
maboy/src/util/: bit_ops.rs
src/: expect_msg_box.rs  gamepad_input.rs  gfx.rs  hresult_error.rs  lib.rs  main.rs  open_file_dialog.rs  os_timing.rs  util.rs  window.rs  window_factory.rs  window_input.rs
src/maboy/: address.rs  board.rs  cartridge.rs  clock.rs  cpu.rs  error.rs  interrupt_system.rs  joypad.rs  mem_frame.rs  memory.rs  mmu.rs  mod.rs  ppu.rs  serial_port.rs  timer.rs
src/maboy/board/: mod.rs  oam_dma.rs
src/maboy/cartridge/: battery.rs  cartridge_desc.rs  cram.rs  desc.rs  mbc.rs  mod.rs  variant.rs
src/maboy/cpu/: execute.rs  instruction.rs  instructions.rs  interrupt.rs  interrupts.rs  mod.rs  operands.rs  registers.rs
src/maboy/debug/: cpu_debugger.rs  dbg_instr.rs  fmt.rs  mod.rs
src/maboy/debugger/: cpu_debugger.rs  dbg_instr.rs  mod.rs
src/maboy/memory/: cartridge_mem.rs  internal_mem.rs  mem_addr.rs  memory_map.rs  mod.rs
src/maboy/ppu/: color.rs  cpu_frame.rs  lcdc.rs  lcds.rs  mem_frame.rs  mod.rs  oam.rs  palette.rs  pixel_queue.rs  ppu_registers.rs  sprite.rs  tile_data.rs
src/maboy/util/: bit_ops.rs  mod.rs
src/maboy/windows/: gfx.rs  hresult_error.rs  mod.rs  util.rs  window.rs
src/maboy_old/: cartridge.rs  clock.rs  cpu.rs  input.rs  mem_frame.rs  mmu.rs  mod.rs  ppu.rs  timer.rs  util.rs
src/maboy_windows/: gamepad_input.rs  gfx.rs  mod.rs  os_timing.rs  window.rs  window_factory.rs  window_input.rs
