[package]
name = "maboy"
version = "0.1.0"
authors = ["Markus Webel <m@rkus.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["libloaderapi",] }
wio = "0.2" # Because of their pretty ComPtr implementation
log = "0.4"
env_logger = "0.7"
bitflags = "1.2"

# Uncomment if you want debug symbols in your release build (useful for profiling)
# [profile.release]
# debug = true