[package]
name = "maboy"
version = "0.1.0"
authors = ["Markus Webel <m@rkus.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
bitflags = "1.2"
fixedbitset = "0.3"
num_enum = "0.4"
iced = "0.1"

# TODO: Hide this behind platform specific compilation
winapi = { version = "0.3", features = ["libloaderapi", "winuser", "errhandlingapi", "windef", "minwindef", "d3d11", "d3dcommon", "dxgi1_2", "synchapi", "handleapi", "profileapi", "xinput"] }
wio = "0.2" # Because of their pretty ComPtr implementation

# Uncomment if you want debug symbols in your release build (useful for profiling)
# [profile.release]
# debug = true