[package]
name = "maboy"
version = "0.1.0"
authors = ["Markus Webel <m@rkus.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
bitflags = "1.2"
fixedbitset = "0.3"
num_enum = "0.4"

# Only keep this as long as we have the ugly CLI debugger
console = { version = "0.11", features = [] }
parse_int = "0.4"