[package]
name = "maboy"
version = "0.2.0"
authors = ["Markus Webel <m@rkus.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
bitflags = "1.2"
fixedbitset = "0.3"
num_enum = "0.4"

# TODO: Only keep this as long as we have the CLI debugger instead of a solid debug API
console = { version = "0.11", features = [] }
parse_int = "0.4"